fix logo on firefox

--- a/erc.css
+++ b/erc.css
@@ -79,6 +79,7 @@ body {
 }
 .logo{
     height: 3.8rem;
+    width: auto;
     padding: 15px;
     padding-top: 5px;
     opacity: .9;
